fixed overflow

--- a/style.css
+++ b/style.css
@@ -168,3 +168,7 @@
       transform: translate(-50%, -50%); /* Center the element */
       text-align: center; /* Center the text */
   }
+
+  body{
+    overflow: hidden;
+  }
